@@ -31,6 +31,7 @@ version 2.2
   * Deprecated StaticContext:getNamespaceURIByPrefix()
   * Fixed bug #918211 (xqueryx fulltext w3c conformance generation)
   * Fixed bug #918157 (Add XQFTTS to validation queue)
+  * Fixed bug with unversioned modules with C++ external functions
 
 version 2.1
 
